# AlynCoin-public

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  add_quiet_mode.sh  alyncoin  auto_trace_patch.py  blacklist_test  blockchain.h  build-nft.sh  close  cmake_install.cmake  cmake_log.txt  config.ini  config.ini.example  config.toml  debug_falcon_key  identitycli  m0_manifest.json  miner  peers.txt  private_key_unencrypted.pem  proto_has_checks.txt  proto_setters.txt  proto_string_fields.txt  public_key.pem  replace_blockchain_singletons.sh  requirements_linux.txt  requirements_mac.txt  swapcli  test_json  test_public_key.pem  test_signature.sig
alyn-air/: Cargo.toml
alyn-air/src/: assertion.rs  constraints.rs  context.rs  evaluation_frame.rs  lib.rs  proof.rs  traits.rs  transition.rs  transition_constraint.rs
alyn-crypto/: Cargo.toml
alyn-crypto/src/: digest.rs  element_hash.r  element_hash.rs  hash.rs  lib.rs  merkle.rs  merkle_path.rs  mod.rs  random_coin.rs  utils.rs
alyn-math/: Cargo.toml
alyn-math/src/: fft.rs  field_element.rs  iterators.rs  lib.rs  matrix.rs  mod.rs  traits.rs  utils.rs
alyn-prover/: Cargo.toml
alyn-prover/src/: air_prover.rs  constraint_commitment.rs  constraint_evaluator.rs  lib.rs  matrix.rs  mod.rs  proof.rs  trace.rs  trace_lde.rs
alyn-verifier/: Cargo.toml
alyn-verifier/src/: channel.rs  error.rs  fri_verifier.rs  lib.rs  options.rs  proof.rs  verifier.rs  verifier_channel.rs
alynstark/: Cargo.toml  all_rs_files.txt  bulk_rename.sh  declared_modules.txt
alynstark/src/: channel.rs  commitment.rs  composer.rs  evaluator.rs  lib.rs
alynstark/src/air/: aux.rs  coefficients.rs  context.rs  divisor.rs  mod.rs  tests.rs  trace_info.rs
alynstark/src/composer/: mod.rs
alynstark/src/constraints/: composition_poly.rs  evaluation_table.rs
alynstark/src/fft/: concurrent.rs  fft_inputs.rs  mod.rs  serial.rs  tests.rs
alynstark/src/field/: mod.rs  traits.rs
alynstark/src/folding/: mod.rs
alynstark/src/hash/: mod.rs
alynstark/src/matrix/: col_matrix.rs  row_matrix.rs  segments.rs  tests.rs
alynstark/src/merkle/: concurrent.rs  mod.rs  proofs.rs  tests.rs
alynstark/src/polynom/: mod.rs  tests.rs
alynstark/src/proof/: commitments.rs  context.rs  mod.rs  ood_frame.rs  queries.rs  security.rs  table.rs
alynstark/src/prover/: channel.rs  mod.rs  tests.rs
alynstark/src/random/: default.rs  mod.rs
alynstark/src/tests/: mod.rs
alynstark/src/trace/: mod.rs  poly_table.rs  tests.rs  trace_table.rs
alynstark/src/utils/: mod.rs
alynstark/src/verifier/: channel.rs  mod.rs
nftcli/nft/: CMakeCache.txt  CMakeLists.txt  nft.cpp  nft.h  nft_cli.cpp  nft_zk.cpp  nft_zk.h
rocks_minimal_broken/: CMakeLists.txt
src/: .blockchain.cpp.swp  .gitignore  .network.cpp.swp  CMakeLists(windowsbuild).txt  CMakeLists.txt  Makefile  base64.h  blake3.h  blake3_dispatch.c  block.cpp  block.cpp.bak  block.h  block.h.bak  block_protos.pb.cc  block_protos.pb.h  block_reward.h  blockchain.cpp  blockchain.cpp.bak  blockchain.cpp.save  blockchain.h  blockchain.h.bak  blockchain_protos.pb.cc  blockchain_protos.pb.h  check_redundant_files.sh  cli.cpp  config.cpp  config.h  constants.h  crypto_protos.pb.h  crypto_utils.cpp  crypto_utils.cpp.bak  crypto_utils.h  difficulty.h  embedded_genesis.h  epoch_sync.cpp  genesis.h  hash.cpp  hash.h  keccak.cpp  keccak.h  (+45 more)
src/assets/: alyn_assets.h
src/atomic_swaps/: atomic_swap.cpp  atomic_swap.h  proto_utils.cpp  proto_utils.h  rocksdb_swap_store.cpp  rocksdb_swap_store.h  swap_manager.cpp  swap_manager.h  swapcli  swapcli.cpp
src/atomic_swaps/swapdb/: 000010.sst  LOG  (+8 more)
src/bridge/: bridge_cli.cpp
src/cli/: alyncoin_cli.cpp  peer_blacklist_cli.cpp  peer_blacklist_ui.cpp
src/cmake/: embed_genesis.cmake
src/consensus/: difficulty.cpp  fork_choice.cpp  fork_choice.h  reward.cpp  reward.h
src/core/: Metrics.hpp
src/crypto/: sphinx.cpp  sphinx.h
src/db/: db_instance.cpp  db_instance.h  db_paths.h  db_writer.cpp  db_writer.h  rocksdb_options_utils.h  rocksdb_wrapper.cpp  rocksdb_wrapper.h
src/explorer/: Dockerfile  README.md  explorer_db.cpp  explorer_db.h  explorer_server.cpp  explorer_server.h  explorer_utils.h
src/governance/: dao.cpp  dao.h  dao_storage.cpp  dao_storage.h  devfund.cpp
src/identity/: identity.cpp  identity.h  identity_store.cpp  identity_store.h  identitycli.cpp  proto_utils.cpp
src/layer2/: l2_account.h  l2_executor.cpp  l2_executor.h  l2_state.cpp  l2_state.h  l2_tx.h  layer2_rollups.cpp  layer2_rollups.h  state_channel.cpp  state_channel.h  wasm_engine.cpp  wasm_engine.h
src/metrics/: main.cpp  metrics_server.cpp  metrics_server.h
src/net/: frame_logger.h
src/network/: OrphanPool.hpp  RateLimiter.hpp  peer_blacklist.cpp  peer_blacklist.h  peer_manager.cpp  peer_manager.h
src/nft/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  nft.cpp  nft.h  nft_cli.cpp  nft_cli.h  nft_storage.cpp  nft_storage.h  nft_utils.cpp  nft_utils.h
src/proto/: atomic_swap.proto  block_protos.proto  blockchain_protos.proto  crypto_protos.proto  identity.proto  main_protos.proto  net_frame.proto  nft.proto  sync_protos.proto  transaction_protos.proto
src/rollup/: rollup_block.cpp  rollup_block.h  rollup_utils.cpp  rollup_utils.h
src/rpc/: metrics.cpp  metrics.h
src/rust/: Cargo.toml  add_pub_to_structs.sh  fix_imports.sh  unresolved_imports.txt
src/self_healing/: health_monitor.cpp  health_monitor.h  self_healing_node.cpp  self_healing_node.h  sync_recovery.cpp  sync_recovery.h
src/syncing/: headers_sync.cpp  headers_sync.h  orphan_pool.cpp  orphan_pool.h
src/transport/: peer_globals.cpp  peer_globals.h  peer_state.h  pubsub_router.cpp  pubsub_router.h  ssl_transport.cpp  ssl_transport.h  tcp_transport.cpp  tcp_transport.h  transport.h
src/unit/: reorg.test.cpp
src/utils/: format.cpp  format.h  logger.cpp  logger.h
src/validation/: transaction_validator.h
src/wire/: varint.h
src/zk/: recursive_proof_helper.cpp  recursive_proof_helper.h  rust_bindings.h  winterfell_ffi.h  winterfell_stark.cpp  winterfell_stark.h
(+262 files in other folders)
