[package]
name = "alyn-air"
version = "0.12.0"
edition = "2021"

[dependencies]
alyn-crypto = { path = "../alyn-crypto" }
alyn-math = { path = "../alyn-math", default-features = false }
alyn-utils = { path = "../alyn-utils", default-features = false }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["std"]
std = ["alyn-math/std", "alyn-utils/std", "serde/std"]
