[package]
name = "alyn-math"
version = "0.12.0"
edition = "2021"

[dependencies]
alyn-utils = { path = "../alyn-utils", default-features = false, features = ["std"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = ["std"]
std = [
    "alyn-utils/std",
    "serde"
]
