[package]
name = "alyn-prover"
version = "0.12.0"
edition = "2021"

[dependencies]
alyn-air = { path = "../alyn-air", default-features = false }
alyn-math = { path = "../alyn-math", default-features = false }
alyn-crypto = { path = "../alyn-crypto", default-features = false }
alyn-utils = { path = "../alyn-utils", default-features = false }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["std"]
std = [
    "alyn-air/std",
    "alyn-math/std",
    "alyn-crypto/std",
    "alyn-utils/std",
    "serde/std"
]
