[package]
name = "alyn-verifier"
version = "0.12.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
alyn-utils = { path = "../alyn-utils", default-features = false }
alyn-air = { path = "../alyn-air", default-features = false }
alyn-crypto = { path = "../alyn-crypto", default-features = false }
alyn-math = { path = "../alyn-math", default-features = false }

[features]
default = ["std"]
std = [
    "alyn-air/std",
    "alyn-crypto/std",
    "alyn-math/std",
    "alyn-utils/std",
    "serde/std"
]
